--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     --color-white: #FFFFFF;
     --color-dark-blue: #222374;
     --color-gray: #CCCCCC;
-;
+    --color-black: #000000;
 }
 
 * {
@@ -61,12 +61,10 @@ header nav {
 }
 
 #meet-our-space h2 {
-    width: 357px;
-    height: 44px;
     font-size: 32px;
     display: inline-block;
     margin-bottom: 40px;
-    color: #FFFFFF;
+    color: var(--color-white);
 }
 
 .space-card {
@@ -74,8 +72,34 @@ header nav {
     padding: 20px;
     border-radius: 8px;
     margin-bottom: 20px;
+    color: var(--color-black);
 }
 
 .space-card h3 {
     margin-bottom: 20px;
+}
+
+#modalities {
+    background-color: var(--color-white);
+    padding: 20px 0;
+}
+
+#modalities h2 {
+    font-size: 32px;
+    display: inline-block;
+    margin-bottom: 40px;
+    color: var(--color-red);
+}
+
+.modalities-card {
+    background: var(--color-dark-blue);
+    padding: 20px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    color: var(--color-gray);
+}
+
+.modalities-card h3 {
+    margin-bottom: 20px;
+    color:var(--color-white);
 }
