--- a/css/style.css
+++ b/css/style.css
@@ -73,10 +73,12 @@ header nav {
     border-radius: 8px;
     margin-bottom: 20px;
     color: var(--color-black);
+    font-size: 14px;
 }
 
 .space-card h3 {
     margin-bottom: 20px;
+    font-size: 20px;
 }
 
 #modalities {
@@ -97,9 +99,51 @@ header nav {
     border-radius: 8px;
     margin-bottom: 20px;
     color: var(--color-gray);
+    font-size: 14px;
 }
 
 .modalities-card h3 {
     margin-bottom: 20px;
     color:var(--color-white);
+    font-size: 20px;
+}
+
+footer {
+    background-color: var(--color-black);
+    color: var(--color-white);
+}
+
+footer img {
+    width: 30px;
+    height: 30px;
+}
+
+.container-footer {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 60px 0;
+    counter-reset: var(--color-white);
+    font-size: 14px;
+}
+
+.footer-social-media a {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.footer-social-media a img {
+    margin-right: 10px;
+}
+
+.footer-address {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
 }
